Alterando os tipos de parâmetros do GET
